--- a/app/templates/admin/achievement-create.hbs
+++ b/app/templates/admin/achievement-create.hbs
@@ -17,7 +17,7 @@
         {{input type="checkbox" checked=persistent}} Perzistentní
       </div>
 
-      <div class="form-group">
+      <div class="form-group col-md-12">
         <h3>Obrázek</h3>
         {{content-component model=model type='gallery' selectable=true selected=picture on_select="ach_select"}}
       </div>
