--- a/app/templates/admin/achievement-edit.hbs
+++ b/app/templates/admin/achievement-edit.hbs
@@ -17,7 +17,7 @@
         {{input type="checkbox" checked=model.achievement.persistent}} Perzistentní
       </div>
 
-      <div class="form-group">
+      <div class="form-group col-md-12">
         <h3>Obrázek</h3>
         {{content-component model=model.content type='gallery' selectable=true selected=model.achievement.picture on_select="ach_select"}}
       </div>
