--- a/app/templates/admin/article-create.hbs
+++ b/app/templates/admin/article-create.hbs
@@ -22,8 +22,7 @@
       </div>
 
       <div class="form-group">
-        <label>URL obrázku (později bude zpracováno hezčeji):</label>
-        {{input value=picture class="form-control" required=true}}
+        <label>Obrázek a&nbsp;přílohy bude možné přiložit po vytvoření článku.</label>
       </div>
 
       <div class="row" style="margin-left:0px; margin-top:20px">
