--- a/app/templates/components/content-component.hbs
+++ b/app/templates/components/content-component.hbs
@@ -4,17 +4,17 @@
     <ul>
     {{#each files as |file|}}
         <li class="{{if file.selected 'selected'}}">
-            <strong><a href="{{endpoint}}{{file.file}}" target="_blank">{{endpoint}}{{file.file}}</a></strong>
+            <strong><a href="{{endpoint}}{{file.file}}" target="_blank">{{file.file}}</a></strong>
 
             {{#unless file.selected}}
+                {{#if selectable}}<button class="btn-xs btn-primary" {{action "select" file}}>Vybrat</button>{{/if}}
                 {{#if file.deleting}}
                     <button class="btn-xs btn-primary disabled">Mažu...</button>
                 {{else}}
                     <button class="btn-xs btn-primary" {{action "delete_file" file}}>Smazat</button>
                 {{/if}}
-
-                {{#if selectable}}<button class="btn-xs btn-primary" {{action "select" file}}>Vybrat</button>{{/if}}
             {{/unless}}
+            <button class="btn-xs btn-primary" {{action "copy-to-clipboard" file}}>Kopírovat URL</button>
         </li>
     {{else}}
         <p>Zatím žádné soubory</p>
@@ -34,14 +34,14 @@
             </div>
             <div style="float: top;">
                 {{#unless file.selected}}
+                    {{#if selectable}}<button class="btn-xs btn-primary" {{action "select" file}}>Vybrat</button>{{/if}}
                     {{#if file.deleting}}
                         <button class="btn-xs btn-primary disabled">Mažu...</button>
                     {{else}}
                         <button class="btn-xs btn-primary" {{action "delete_file" file}}>Smazat</button>
                     {{/if}}
-
-                    {{#if selectable}}<button class="btn-xs btn-primary" {{action "select" file}}>Vybrat</button>{{/if}}
                 {{/unless}}
+                <button class="btn-xs btn-primary" {{action "copy-to-clipboard" file}}>Kopírovat URL</button>
             </div>
         </div>
     {{else}}
