--- a/app/styles/layout/footer.scss
+++ b/app/styles/layout/footer.scss
@@ -163,3 +163,7 @@ div#preload { display: none; }
    background: url("/img/logos/los-hover.svg") top left no-repeat;
    background-size: 50px 50px;
  }
+
+footer .footer-below a {
+    color: white;
+}
