--- a/app/templates/footer.hbs
+++ b/app/templates/footer.hbs
@@ -35,7 +35,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     Tato aktivita je realizována v&nbsp;rámci projektu Popularizace vědy a&nbsp;výzkumu v&nbsp;přírodních vědách a&nbsp;matematice s&nbsp;využitím potenciálu MU, reg. č.&nbsp;CZ.1.07/2.3.00/45.0018.
-                    Copyright &copy;&nbsp;KSI&nbsp;2015&ndash;2016
+                    Copyright &copy;&nbsp;<a href="/img/ee/tuxs.gif" target="_blank">KSI</a>&nbsp;2015&ndash;2016
                 </div>
             </div>
         </div>
