--- a/app/templates/footer.hbs
+++ b/app/templates/footer.hbs
@@ -14,6 +14,7 @@
                         <a href="http://brkos.math.muni.cz" title="BRněnský KOrespondenční Seminář" class="footer-logo inline-footer" id="brkos-logo"></a>
                         <a href="http://keks.math.muni.cz/" title="Korespondenční EKologický Seminář" class="footer-logo inline-footer" id="keks-logo"></a>
                         <a href="http://interlos.fi.muni.cz" title="INTERnetová LOgická Soutěž" class="footer-logo inline-footer" id="los-logo"></a>
+                        <a href="https://github.com/fi-ksi" title="KSI @ GitHub" class="footer-logo inline-footer" id="github-logo"></a>
                       </div>
                       <div style="opacity: 0.001;">
                         <img src="/img/logos/email-hover.svg" width="1" height="1"/>
@@ -25,6 +26,7 @@
                         <img src="/img/logos/brkos-hover.svg" width="1" height="1"/>
                         <img src="/img/logos/intersob-hover.svg" width="1" height="1"/>
                         <img src="/img/logos/los-hover.svg" width="1" height="1"/>
+                        <img src="/img/logos/github-hover.svg" width="1" height="1"/>
                       </div>
                 </div>
             </div>
