MU logo -> svg.

--- a/app/styles/layout/footer.scss
+++ b/app/styles/layout/footer.scss
@@ -88,13 +88,12 @@ div#preload { display: none; }
    background-size: 50px 50px;
  }
 
-//TODO
  #mu-logo {
-   background: url("/img/logos/logo-mu.png") top left no-repeat;
+   background: url("/img/logos/mu.svg") top left no-repeat;
    background-size: 50px 50px;
  }
  #mu-logo:hover {
-   background: url("/img/logos/logo-mu-hover.png") top left no-repeat;
+   background: url("/img/logos/mu-hover.svg") top left no-repeat;
    background-size: 50px 50px;
  }
 
