--- a/app/templates/footer.hbs
+++ b/app/templates/footer.hbs
@@ -21,7 +21,7 @@
                         <img src="/img/logos/facebook-hover.svg" width="1" height="1"/>
                         <img src="/img/logos/youtube-hover.svg" width="1" height="1"/>
                         <img src="/img/logos/logo-fi-hover.png" width="1" height="1"/>
-                        <img src="/img/logos/logo-mu-hover.png" width="1" height="1"/>
+                        <img src="/img/logos/mu-hover.svg" width="1" height="1"/>
                         <img src="/img/logos/keks-hover.svg" width="1" height="1"/>
                         <img src="/img/logos/brkos-hover.svg" width="1" height="1"/>
                         <img src="/img/logos/intersob-hover.svg" width="1" height="1"/>
