Align pictures in articles administration.

--- a/app/templates/admin/articles.hbs
+++ b/app/templates/admin/articles.hbs
@@ -13,7 +13,7 @@
     <tbody>
      {{#each articles as |article|}}
         <tr style="height: 45px">
-            <td>{{#link-to "article" article target="_blank"}}<img src="{{article.picture}}" style="height: 25px;" align="center"> {{article.title}}{{/link-to}}</td>
+            <td>{{#link-to "article" article target="_blank"}}<img src="{{article.picture}}" style="height: 25px; width:25px;" align="center"> {{article.title}}{{/link-to}}</td>
             <td>{{date-and-time article.time_published 'cs'}}</td>
             <td>{{article.published_str}}</td>
             <td>{{#link-to "admin/article-edit" article class="btn btn-primary inline"}}Upravit{{/link-to}}
