--- a/app/styles/layout/footer.scss
+++ b/app/styles/layout/footer.scss
@@ -78,13 +78,12 @@ div#preload { display: none; }
    background-size: 50px 50px;
  }
 
-//TODO
  #fi-logo {
-   background: url("/img/logos/logo-fi.png") top left no-repeat;
+   background: url("/img/logos/fi.svg") top left no-repeat;
    background-size: 50px 50px;
  }
  #fi-logo:hover {
-   background: url("/img/logos/logo-fi-hover.png") top left no-repeat;
+   background: url("/img/logos/fi-hover.svg") top left no-repeat;
    background-size: 50px 50px;
  }
 
