--- a/app/templates/footer.hbs
+++ b/app/templates/footer.hbs
@@ -14,13 +14,14 @@
                         <a href="http://brkos.math.muni.cz" title="BRněnský KOrespondenční Seminář" class="footer-logo inline-footer" id="brkos-logo"></a>
                         <a href="http://keks.math.muni.cz/" title="Korespondenční EKologický Seminář" class="footer-logo inline-footer" id="keks-logo"></a>
                         <a href="http://interlos.fi.muni.cz" title="INTERnetová LOgická Soutěž" class="footer-logo inline-footer" id="los-logo"></a>
+                        <a href="http://intersob.math.muni.cz" title="Soutěž InterSoB" class="footer-logo inline-footer" id="sob-logo"></a>
                         <a href="https://github.com/fi-ksi" title="KSI @ GitHub" class="footer-logo inline-footer" id="github-logo"></a>
                       </div>
                       <div style="opacity: 0.001;">
                         <img src="/img/logos/email-hover.svg" width="1" height="1"/>
                         <img src="/img/logos/facebook-hover.svg" width="1" height="1"/>
                         <img src="/img/logos/youtube-hover.svg" width="1" height="1"/>
-                        <img src="/img/logos/logo-fi-hover.png" width="1" height="1"/>
+                        <img src="/img/logos/fi-hover.svg" width="1" height="1"/>
                         <img src="/img/logos/mu-hover.svg" width="1" height="1"/>
                         <img src="/img/logos/keks-hover.svg" width="1" height="1"/>
                         <img src="/img/logos/brkos-hover.svg" width="1" height="1"/>
