Add KSP logo & link.
Close #248.

--- a/app/styles/layout/footer.scss
+++ b/app/styles/layout/footer.scss
@@ -162,6 +162,15 @@ div#preload { display: none; }
    background-size: 50px 50px;
  }
 
+ #ksp-logo {
+   background: url("/img/logos/ksp.svg") top left no-repeat;
+   background-size: 50px 50px;
+ }
+ #ksp-logo:hover {
+   background: url("/img/logos/ksp-hover.svg") top left no-repeat;
+   background-size: 50px 50px;
+ }
+
  #github-logo {
    background: url("/img/logos/github.svg") top left no-repeat;
    background-size: 50px 50px;
