--- a/app/templates/footer.hbs
+++ b/app/templates/footer.hbs
@@ -15,6 +15,7 @@
                         <a href="http://keks.math.muni.cz/" title="Korespondenční EKologický Seminář" class="footer-logo inline-footer" id="keks-logo"></a>
                         <a href="http://interlos.fi.muni.cz" title="INTERnetová LOgická Soutěž" class="footer-logo inline-footer" id="los-logo"></a>
                         <a href="http://intersob.math.muni.cz" title="Soutěž InterSoB" class="footer-logo inline-footer" id="sob-logo"></a>
+                        <a href="http://ksp.mff.cuni.cz" title="Korespondenční seminář z programování" class="footer-logo inline-footer" id="ksp-logo"></a>
                         <a href="https://github.com/fi-ksi" title="KSI @ GitHub" class="footer-logo inline-footer" id="github-logo"></a>
                       </div>
                       <div style="opacity: 0.001;">
@@ -27,6 +28,7 @@
                         <img src="/img/logos/brkos-hover.svg" width="1" height="1"/>
                         <img src="/img/logos/intersob-hover.svg" width="1" height="1"/>
                         <img src="/img/logos/los-hover.svg" width="1" height="1"/>
+                        <img src="/img/logos/ksp-hover.svg" width="1" height="1"/>
                         <img src="/img/logos/github-hover.svg" width="1" height="1"/>
                       </div>
                 </div>
