--- a/app/templates/registration.hbs
+++ b/app/templates/registration.hbs
@@ -132,7 +132,7 @@
 
       <div class="form-group">
         <label for="year-maturita">Rok maturity:</label>
-        {{input value=model.school_finish class="form-control" required=true placeholder="2016"}}
+        {{input type="number" min="1900" max="2200" value=model.school_finish class="form-control" required=true}}
       </div>
 
             <div style="margin-top:30px">
